--- a/implicit_grant/public/index.html
+++ b/implicit_grant/public/index.html
@@ -131,8 +131,8 @@
 
           document.getElementById('login-button').addEventListener('click', function() {
 
-            var client_id = 'CLIENT_ID'; // Your client id
-            var redirect_uri = 'REDIRECT_URI'; // Your redirect uri
+            var client_id = '118c02ee92b74e0093afb8c698aad1d9'; // Your client id
+            var redirect_uri = 'http://localhost:8888'; // Your redirect uri
 
             var state = generateRandomString(16);
 
